--- a/src/assets/styles/layout.module.scss
+++ b/src/assets/styles/layout.module.scss
@@ -63,7 +63,8 @@
 }
 
 .remember_text {
-  margin-top: -53px;
+  margin-top: -17px !important;
+  margin-left: 23px;
 }
 
 .member_info {
@@ -130,7 +131,7 @@
     padding-left: 12px;
 
     padding-right: 15px;
-
+    padding-bottom: 20px;
     padding-top: 50.46px;
     color: #101010;
   }
