--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -2,7 +2,7 @@
   background-color: #000;
   color: #fff;
   padding: 53px 69px;
-  // min-height: 100%;
+  min-height: 72vmax;
 }
 
 .sidebar_list {
