--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -4,6 +4,7 @@
   border-radius: 5px;
   background: #6979f8;
   border-color: #6979f8;
+  cursor: pointer;
 
   font-size: 16px;
   line-height: 22px;
@@ -29,6 +30,7 @@
   line-height: 22px;
 
   color: #fff;
+  cursor: pointer;
 
   filter: drop-shadow(0px 4px 4px rgba(50, 50, 71, 0.08))
     drop-shadow(0px 4px 8px rgba(50, 50, 71, 0.06));
