--- a/src/pages/dashboard/dashboard.module.scss
+++ b/src/pages/dashboard/dashboard.module.scss
@@ -21,7 +21,7 @@
 
 .horizontal_line {
   border-bottom: 0.537255px solid #dedede;
-  margin-bottom: 26.97px;
+  margin-bottom: 46.97px;
   margin-top: 10.95px;
 }
 
@@ -30,72 +30,6 @@
   display: flex;
   justify-content: space-between;
   padding-top: 56.69px;
-}
-
-.transactions_item {
-  display: grid;
-  grid-template-columns: 15% 70% 15%;
-  padding-bottom: 38px;
-}
-
-.transaction_detail {
-  margin-top: -30px;
-}
-
-.transaction_time_date {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  letter-spacing: 0.537255px;
-
-  color: #404852;
-
-  mix-blend-mode: normal;
-  opacity: 0.5;
-  margin-top: -18px;
-}
-
-.transaction_amount {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 17.1922px;
-  line-height: 19px;
-  /* identical to box height */
-  text-align: right;
-  letter-spacing: 0.368403px;
-
-  color: #273240;
-  margin-top: -7px;
-}
-
-.transaction_title {
-  top: calc(50% - 19px / 2 - 16.5px);
-  font-style: normal;
-  font-weight: 700;
-  font-size: 17.1922px;
-  line-height: 19px;
-  /* identical to box height */
-  letter-spacing: 0.368403px;
-
-  color: #273240;
-}
-
-.dashboard_view_all_link {
-  text-align: center;
-  padding-bottom: 40px;
-}
-
-.dashboard_view_all_link a {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 13.5px;
-  line-height: 14px;
-  letter-spacing: 0.604412px;
-
-  color: #404852;
-  text-decoration: none;
-  padding-top: 33.75px;
 }
 
 //avatar
@@ -144,5 +78,20 @@
     padding-left: 13.94px;
     padding-right: 62.94px;
     padding-top: 57px;
+  }
+
+  .open_navbar_control,
+  .close_navbar_control {
+    position: absolute;
+    font-size: 30px;
+    left: 10px;
+  }
+
+  .close_navbar_control {
+    color: #dedede;
+  }
+
+  .dashboard_stats img {
+    width: 360px;
   }
 }
